--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -13,4 +13,8 @@
   <ItemGroup>
     <Compile Remove="Pages\Index.cshtml.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
 </Project>
